--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <script type="text/javascript" src="lib/require/require.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../errorcollector.js"></script>
