--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -9,7 +9,6 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
-  <script type="text/javascript" src="lib/require/require.js"></script>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
   <!-- include source files here... -->
@@ -20,22 +19,31 @@
 
   <script type="text/javascript">
     (function() {
-      require(['errorcollector'], function(errorcollector) {
-        var jasmineEnv = jasmine.getEnv();
-        jasmineEnv.updateInterval = 1000;
+      var jasmineEnv = jasmine.getEnv();
+      jasmineEnv.updateInterval = 1000;
 
-        var htmlReporter = new jasmine.HtmlReporter();
+      var htmlReporter = new jasmine.HtmlReporter();
 
-        jasmineEnv.addReporter(htmlReporter);
+      jasmineEnv.addReporter(htmlReporter);
 
-        jasmineEnv.specFilter = function(spec) {
-          return htmlReporter.specFilter(spec);
-        };
+      jasmineEnv.specFilter = function(spec) {
+        return htmlReporter.specFilter(spec);
+      };
 
+      var currentWindowOnload = window.onload;
+
+      window.onload = function() {
+        if (currentWindowOnload) {
+          currentWindowOnload();
+        }
+        execJasmine();
+      };
+
+      function execJasmine() {
         jasmineEnv.execute();
-      });
-    })();
+      }
 
+    })();
   </script>
 
 </head>
