--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/async-callback.js"></script>
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
